@@ -55,6 +55,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #5949: added check for correct lineends in input from IMAP server
+  in imaplib.
+
 - Fix variations of extending deques:  d.extend(d)  d.extendleft(d)  d+=d
 
 - Issue #6986: Fix crash in the JSON C accelerator when called with the
